--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "mocha"
   },
   "dependencies": {
+    "chai": "*",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11",
     "mocha": "*",
-    "chai": "*"
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
   }
 }
